Mejoras de arquitectura y codigo

--- a/index.html
+++ b/index.html
@@ -1,26 +1,71 @@
 <!doctype html>
-<html lang="en">
+<html lang="es" prefix="og: https://ogp.me/ns#">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- TODO: Set the document title to the name of your application -->
-    <title>Lovable App</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0" />
+    <meta name="theme-color" content="#1e3a8a" />
 
-    <!-- TODO: Update og:title to match your application name -->
-    <meta property="og:title" content="Lovable App" />
-    <meta property="og:description" content="Lovable Generated Project" />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <title>O&P Ingeniería | Soluciones Eléctricas e Industriales en Colombia</title>
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="description" content="Proveedor líder en ingeniería eléctrica, energía solar, sistemas UPS y automatización industrial en Colombia. Cotizaciones técnicas por WhatsApp.">
+    <meta name="author" content="O&P Ingeniería S.A.S.">
+    <meta name="robots" content="index, follow">
+
+    <link rel="canonical" href="https://www.opingenieria.com/" />
+
+    <!-- Preconnect -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800&family=Open+Sans:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+
+    <!-- Favicons -->
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+
+    <!-- PWA -->
+    <link rel="manifest" href="/site.webmanifest">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-title" content="O&P Ingeniería">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+
+    <!-- Open Graph -->
+    <meta property="og:site_name" content="O&P Ingeniería">
+    <meta property="og:type" content="website">
+    <meta property="og:locale" content="es_CO">
+
+    <!-- Critical CSS -->
+    <style>
+      .critical-hidden { opacity: 0; }
+      .critical-visible { animation: fadeIn .25s ease-out forwards; }
+      @keyframes fadeIn { to { opacity: 1; } }
+    </style>
   </head>
 
-  <body>
-    <div id="root"></div>
+  <body class="font-body antialiased bg-white text-gray-900">
+    <noscript>
+      <div style="padding:2rem;text-align:center">
+        <h1>O&P Ingeniería</h1>
+        <p>JavaScript es requerido para ejecutar esta aplicación.</p>
+      </div>
+    </noscript>
+
+    <div id="root" class="critical-hidden"></div>
+
+    <!-- Bootstrap React (sin async, sin defer, sin preload) -->
     <script type="module" src="/src/main.tsx"></script>
+
+    <!-- Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXX"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-XXXXXXX');
+    </script>
   </body>
 </html>
