--- a/index.html
+++ b/index.html
@@ -25,16 +25,17 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="/favicon-192x192.png">
 
     <!-- PWA -->
     <link rel="manifest" href="/site.webmanifest">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-title" content="O&P Ingeniería">
+    <meta name="apple-mobile-web-app-title" content="O&P Ingeniería SAS">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
     <!-- Open Graph -->
-    <meta property="og:site_name" content="O&P Ingeniería">
+    <meta property="og:site_name" content="O&P Ingeniería SAS">
     <meta property="og:type" content="website">
     <meta property="og:locale" content="es_CO">
 
