Mejoras Comerciales y SEO

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0" />
     <meta name="theme-color" content="#1e3a8a" />
 
-    <title>O&amp;P Ingeniería | Soluciones Eléctricas e Industriales en Colombia</title>
+    <title>O&amp;P Ingeniería S.A.S. | Ingeniería eléctrica e industrial en Bogotá</title>
 
     <meta
       name="description"
-      content="Proveedor líder en ingeniería eléctrica, energía solar, sistemas UPS y automatización industrial en Colombia. Cotizaciones técnicas por WhatsApp."
+      content="Ingeniería eléctrica e industrial en Bogotá, Colombia: proyectos eléctricos, energía solar fotovoltaica, UPS, grupos electrógenos y mantenimiento."
     />
     <meta name="author" content="O&amp;P Ingeniería S.A.S." />
     <meta name="robots" content="index, follow" />
